Finalização do JS

--- a/index.html
+++ b/index.html
@@ -55,39 +55,7 @@
 
         <section class="conteudoPrincipal_Projetos">
             <h2 class="subtitulo">Meus Projetos</h2>
-
-            <div class="container">
-                <div class="conteudoPrincipal_Projetos-postProjetos">
-                    <a href="#">
-                        <img src="img/lucas-rm.github.io_Portfolio_.png" alt="" class="conteudoPrincipal_Projetos-img">
-
-                        <div class="conteudoPrincipal_Projetos-descricao">
-                            <h3 class="conteudoPrincipal_Projetos-titulo">Projeto 1</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores explicabo, quidem amet nesciunt aliquid fugit maiores dolores earum? Enim dolores blanditiis qui possimus reiciendis dolorum cumque facere quos consequatur eveniet! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus soluta doloremque ipsam nemo atque eum, repellat alias iure doloribus maiores dolorum voluptatum. Maxime hic quasi dolore sapiente ab voluptatum iure.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="conteudoPrincipal_Projetos-postProjetos">
-                    <a href="#">
-                        <img src="img/lucas-rm.github.io_Portfolio_.png" alt="" class="conteudoPrincipal_Projetos-img">
-
-                        <div class="conteudoPrincipal_Projetos-descricao">
-                            <h3 class="conteudoPrincipal_Projetos-titulo">Projeto 1</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores explicabo, quidem amet nesciunt aliquid fugit maiores dolores earum? Enim dolores blanditiis qui possimus reiciendis dolorum cumque facere quos consequatur eveniet!</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="conteudoPrincipal_Projetos-postProjetos">
-                    <a href="#">
-                        <img src="img/lucas-rm.github.io_Portfolio_.png" alt="" class="conteudoPrincipal_Projetos-img">
-
-                        <div class="conteudoPrincipal_Projetos-descricao">
-                            <h3 class="conteudoPrincipal_Projetos-titulo">Projeto 1</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores explicabo, quidem amet nesciunt aliquid fugit maiores dolores earum? Enim dolores blanditiis qui possimus reiciendis dolorum cumque facere quos consequatur eveniet!</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <div class="container"></div>
         </section>
     </main>
 
@@ -96,5 +64,7 @@
     </footer>
 
     <script src="script/main.js"></script>
+    <script src="script/dadosDosprojetos.js"></script>
+    <script src="script/adicionar-projeto.js"></script>
 </body>
 </html>
