Finalização da Home e Sobre Mim

--- a/index.html
+++ b/index.html
@@ -38,17 +38,12 @@
             <div class="container animationFadeIn">
                 <article class="conteudoPrincipal_SobreMim-article">
                     <img src="img/Foto - Lucas (2).jpg" alt="Foto-Lucas" class="conteudoPrincipal_SobreMim-foto">
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
-                    <p class="conteudoPrincipal_SobreMim-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe cumque consectetur placeat dolorum rerum amet, veritatis at fugit? Ut expedita fuga eum repudiandae eos vel dolor, est architecto modi neque.</p>
+                    <h1>Olá, sou Lucas.</h1>
+                    <p class="conteudoPrincipal_SobreMim-descricao">Tenho 18 anos e pretendo seguir a carreira como <b>Desenvolvedor BackEnd</b>, porém não é que eu não goste de FrontEnd, pelo contrário, eu tenho até um hobby que é fazer <u>desenhos digitais</u> que está relacionado a parte de FrontEnd também. Mas o que eu gosto mais é da parte de cálculos matemáticos, de lógica, a parte de dentro do programa, então, por causa disso que resolvi escolher ser Desenvolvedor BackEnd.</p>
+
+                    <p class="conteudoPrincipal_SobreMim-descricao">Atualmente, estou iniciando a graduação de <b>Ciências da Computação</b> na faculdade <b><a href="https://www.unip.br/">UNIP (Universidade Paulista)</a></b> e realizando os cursos disponibilizados pelo programa Desenvolve do Grupo Oboticário em conjunto com a plataforma Alura. Além disso, já sou formado em Técnico de Informárica (2016 - 2020) no <b><a href="https://ceappedreira.org.br/">CEAP (Centro Educacional Assistencial Proficionalizante)</a></b> onde eu tive a chance de participar de feiras de ciências, realizar vários cursos e fazer alguns projetos.</p>
+
+                    <p class="conteudoPrincipal_SobreMim-descricao">E é assim que pretendo conseguir uma primeira oportunidade de trabalhar nessa área.</p>
                 </article>
             </div>
         </section>
