--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
 
             <nav>
                 <ul class="cabecalhoPrincipal-nav-ul">
-                    <li class="cabecalhoPrincipal-nav-ul-itens"><a href="#">home</a></li>
+                    <li class="cabecalhoPrincipal-nav-ul-itens"><a href="index.html">home</a></li>
                     <li class="cabecalhoPrincipal-nav-ul-itens"><a href="#" id="linkSobreMim">sobre mim</a></li>
-                    <li class="cabecalhoPrincipal-nav-ul-itens"><a href="#">currículo</a></li>
-                    <li class="cabecalhoPrincipal-nav-ul-itens"><a href="#">contatos</a></li>
+                    <li class="cabecalhoPrincipal-nav-ul-itens"><a href="https://my.indeed.com/p/lucasr-xca4vgo/preview" target="_blank">currículo</a></li>
+                    <li class="cabecalhoPrincipal-nav-ul-itens">
+                        <a href="#" id="linkContatos">contato</a>
+
+                        <div class="contatos visible">
+                            <a href="https://github.com/Lucas-RM" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/lucas-rodrigues-marcondes-2683a51ab/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="mailto:lucas.marcondes36@gmail.com?subject='subject text'" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                        </div>
+                    </li>
                 </ul>
             </nav>
         </div>
