--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portifólio - Lucas Marcondes | Home</title>
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
